k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-dashboard
  labels:
    name: job-dashboard
